--- a/misc/UI Translations/de/common.de.yaml
+++ b/misc/UI Translations/de/common.de.yaml
@@ -4,4 +4,6 @@ l10n.common.serviceMessage.unreach: 'Das Gerät ist offline'
 l10n.common.serviceMessage.stickyUnreach: 'Das Gerät war offline'
 l10n.common.serviceMessage.configPending: 'Konfigurationsparameter müssen noch an das Gerät übertragen werden'
 l10n.common.serviceMessage.lowbat: 'Die Batterie des Gerätes ist fast leer'
+l10n.common.serviceMessage.alarm: "Der Gerätealarm wurde ausgelöst"
+l10n.common.serviceMessage.fault: "Das Gerät hat eine Störung"
 # }}}
