--- a/homegear-miscellaneous/src/Makefile.am
+++ b/homegear-miscellaneous/src/Makefile.am
@@ -5,7 +5,7 @@ AM_LDFLAGS = -Wl,-rpath=/lib/homegear -Wl,-rpath=/usr/lib/homegear -Wl,-rpath=/u
 
 libdir = $(localstatedir)/lib/homegear/modules
 lib_LTLIBRARIES = mod_miscellaneous.la
-mod_miscellaneous_la_SOURCES = Makefile.am MiscPeer.h Miscellaneous.h Miscellaneous.cpp Factory.cpp Gd.h MiscPeer.cpp DeviceTypes.h GD.cpp Factory.h MiscCentral.cpp MiscCentral.h
+mod_miscellaneous_la_SOURCES = Makefile.am MiscPeer.h Miscellaneous.h Miscellaneous.cpp Factory.cpp Gd.h MiscPeer.cpp DeviceTypes.h Gd.cpp Factory.h MiscCentral.cpp MiscCentral.h
 mod_miscellaneous_la_LDFLAGS =-module -avoid-version -shared
 install-exec-hook:
 	rm -f $(DESTDIR)$(libdir)/mod_miscellaneous.la
