Made server config more secure

--- a/misc/Config Directory/rpcservers.conf
+++ b/misc/Config Directory/rpcservers.conf
@@ -236,7 +236,7 @@ port = 2004
 
 # Enable Homegear's RPC servers on this port.
 # Default: false
-rpcServer = true
+rpcServer = false
 
 # Enable Homegear's build-in web server on this port
 # Default: false
@@ -244,7 +244,7 @@ webServer = true
 
 # Enable Homegear's REST server on this port
 # Default: false
-restServer = true
+restServer = false
 
 # Path to static web content used by the web server
 # Default: /var/lib/homegear/www
