--- a/misc/UI Translations/de/common.de.yaml
+++ b/misc/UI Translations/de/common.de.yaml
@@ -10,5 +10,5 @@ l10n.common.serviceMessage.fault: "Das Gerät hat eine Störung"
 l10n.common.serviceMessage.collective_fault: "Eine Sammelstörung ist aufgetreten"
 l10n.common.serviceMessage.highLoad: "Das Gerät hat eine hohe Auslastung"
 l10n.common.serviceMessage.lowMemory: "Das Gerät hat nur noch wenig verfügbaren Arbeitsspeicher"
-l10n.common.serviceMessage.backupAlive: "Das Backupsystem ist offline"
+l10n.common.serviceMessage.backupOffline: "Das Backupsystem ist offline"
 # }}}
