Added more service messages

--- a/misc/UI Translations/de/common.de.yaml
+++ b/misc/UI Translations/de/common.de.yaml
@@ -11,6 +11,9 @@ l10n.common.serviceMessage.collective_fault: "Eine Sammelstörung ist aufgetrete
 l10n.common.serviceMessage.highLoad: "Das Gerät hat eine hohe Auslastung"
 l10n.common.serviceMessage.lowMemory: "Das Gerät hat nur noch wenig verfügbaren Arbeitsspeicher"
 l10n.common.serviceMessage.backupOffline: "Das Backupsystem ist offline"
+l10n.common.serviceMessage.fire_alarm: "Feueralarm"
+l10n.common.serviceMessage.outside_air_ventilator_active: "Der Außenluftlüfter ist inaktiv"
+l10n.common.serviceMessage.exhaust_air_ventilator_active: "Der Abluftlüfter ist inaktiv"
 l10n.common.serviceMessage.fire_damper_status: "Störung der Brandschutzklappe"
 l10n.common.serviceMessage.fire_damper_collective_fault: "Sammelstörung der Brandschutzklappe"
 # }}}
