Improved integration of homegear-webssh

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -279,6 +279,19 @@ uiPath = /var/lib/homegear/ui
 # Path where UI translation files are stored
 uiTranslationPath = /var/lib/homegear/admin-ui/translations/modules
 
+# Path where Homegear's Web SSH is located.
+# Default: webSshPath = /var/lib/homegear/admin-ui
+webSshPath = /var/lib/homegear/web-ssh
+
+# Default: adminUiPathPermissions = 550
+# webSshPathPathPermissions = 550
+
+# Default: adminUiPathUser =
+# webSshPathPathUser = root
+
+# Default: adminUiPathGroup =
+# webSshPathPathGroup = root
+
 # Reads "defaultRoles.json" on start and recreates all roles in database. Disable this, if you want to create custom
 # roles.
 # Default: reloadRolesOnStartup = true
