Added setting stackSize to main.conf

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -477,3 +477,7 @@ packetReceivedThreadPolicy = SCHED_OTHER
 # Default: maxWaitForPhysicalInterfaces = 180
 # The maximum time to wait for physical interfaces (= communication modules) on startup in seconds.
 maxWaitForPhysicalInterfaces = 30
+
+# Default: stackSize = 524288
+# The maximum stack size in bytes.
+stackSize = 524288
