--- a/debian/rules
+++ b/debian/rules
@@ -53,12 +53,12 @@ override_dh_auto_install:
 	find $(CURDIR)/debian/homegear/var/lib/homegear -type f -exec chmod 440 {} \;
 	chmod 755 $(CURDIR)/debian/homegear/var/lib/homegear/scripts/*.sh
 
-	mkdir -p $(CURDIR)/debian/homegear/usr/share/homegear/php
-	cp -R /usr/share/homegear/php-dev/* $(CURDIR)/debian/homegear/usr/share/homegear/php
-	rm -f $(CURDIR)/debian/homegear/usr/share/homegear/php/*/*.a
-	chown -R root:root $(CURDIR)/debian/homegear/usr/share/homegear
-	find $(CURDIR)/debian/homegear/usr/share/homegear -type d -exec chmod 555 {} \;
-	find $(CURDIR)/debian/homegear/usr/share/homegear -type f -exec chmod 444 {} \;
+	#mkdir -p $(CURDIR)/debian/homegear/usr/share/homegear/php
+	#cp -R /usr/share/homegear/php-dev/* $(CURDIR)/debian/homegear/usr/share/homegear/php
+	#rm -f $(CURDIR)/debian/homegear/usr/share/homegear/php/*/*.a
+	#chown -R root:root $(CURDIR)/debian/homegear/usr/share/homegear
+	#find $(CURDIR)/debian/homegear/usr/share/homegear -type d -exec chmod 555 {} \;
+	#find $(CURDIR)/debian/homegear/usr/share/homegear -type f -exec chmod 444 {} \;
 
 	# {{{ Create Node.js links to be able to run npm in this script
 	# Linking this file uses /usr/bin/node_modules instead of /usr/lib/node_modules
