--- a/misc/Config Directory/php.ini
+++ b/misc/Config Directory/php.ini
@@ -867,7 +867,7 @@ default_socket_timeout = 60
 ;   extension=/path/to/extension/msql.so
 ;
 
-zend_extension=opcache.so
+;zend_extension=opcache.so
 
 ;extension=xmlrpc.so
 ; If you only provide the name of the extension, PHP will look for it in its
